
{{{ Version 5.1pre1

Thanks to Björn "Vampire" Kautler, Jarek Czekalski, Thomas Meyer,
Matthieu Casanova, Alan Ezust, Malathi, Vladimir Avdonin, Eric Le Lay,
Darien Brown, Steve snarum-micron, EdorFaus, Brian Clapper, Uwe Stöhr,
Marc Häfner, stone1343, Richard The, Dale Anson, Benjamin Gmurczyk,
Makarius, Marco Hunsicker, and Maik Nijhuis for contributing to this release.

{{{ Bug fixes

- Fix #3598661 - Don't allow negative values in the general option pane.
  (Thomas Meyer)

- Fix #3596215 - NPE from docking layout save/loads when started with
  -nosettings. (Alan Ezust) 

- Fix #3597101, #3596600 - Bad error handling when an invalid path is entered
  into the VFS Browser inputs. (Patch# 3602318 Benjamin Gmurczyk)

- Bug no. #3590540 revealed a performance problem in the ChunkCache, because
  every scroll action resulted in a tokenization of the really long line, which
  takes a considerable time and makes jEdit unusable.
  Fix is to always keep all Chunks of the tokenization process and use it as an
  buffer in the ChunkCache class.
  Tokenization of the physical line still happens for every insertion or
  deletion of the Buffer. Tokenization also happens when the cursor enters the
  physical line, as only the Chunks from the current physical line are keeped
  in the ChunkCache.
  (#3590540 Thomas Meyer)

- Bug no. #3590540 produced a soft wrap for a single physical line that was
  greater than 16383 screen lines. Increased this limit to 65535 in
  the ScreenLineManager (#3590540 Thomas Meyer)

- Fixed Insert_Selection macro when the selection is empty (#3596616
  Matthieu Casanova)

- fixed bug when pressing down if the is no selection (#3599630
  Matthieu Casanova)

- Fixed macros cut lines and copy lines when the buffer is empty (#3596612
  Matthieu Casanova)

- Fixed negative values used in recent file history count (#3598661 Matthieu
  Casanova)

- Fixed Run script macro when the file is empty (#3596609 Matthieu
  Casanova)
